data/all_generated_tests/raw_wast_tests/call_EdgeCaseFailuresinbr_table_3795.wast
;; 4. **Test: Nested Br_Table in Loop with Call**    - **Description**: Implement a `br_table` inside a loop, followed by a `call` within each iteration.    - **Constraint**: Ensure that each iteration correctly handles the `br_table` control flow and maintains stack integrity for the next `call`.    - **Edge Case**: Verifies stack state preservation and correct `br_table` handling within iterative constructs leading to multiple nested calls.

(assert_invalid
  (module
    (type $t0 (func (param i32)))
    (func $callee (param i32))
    (func (param i32)
      (block $exit
        (loop $loop
          (br_table $loop $exit (local.get 0))
          (call $callee (i32.const 0))
        )
      )
    )
  )
  "type mismatch"
)